2012-12-04  Antoine Quint  <graouts@apple.com>

        INVALID_STATE_ERR error upon calling .addCue() for an already-in-use cue
        https://bugs.webkit.org/show_bug.cgi?id=103264

        Reviewed by Eric Carlson.

        Stop skipping media/track/opera/interfaces/TextTrack/addCue.html as it now mostly passes, the remaining issue
        being tracked by https://bugs.webkit.org/show_bug.cgi?id=103258.

        * media/track/opera/interfaces/TextTrack/addCue-expected.txt: Added.
        * platform/chromium/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations:
        * platform/qt/TestExpectations:
        * platform/win/TestExpectations:

2012-12-04  Mike West  <mkwst@chromium.org>

        Log to console when forms and popups are blocked by 'sandbox'.
        https://bugs.webkit.org/show_bug.cgi?id=103615

        Reviewed by Adam Barth.

        * fast/frames/sandboxed-iframe-attribute-parsing-expected.txt:
        * fast/frames/sandboxed-iframe-forms-dynamic-expected.txt:
        * fast/frames/sandboxed-iframe-forms-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-top-by-name-denied-expected.txt:
        * fast/frames/sandboxed-iframe-navigation-windowopen-expected.txt:
        * http/tests/security/no-popup-from-sandbox.html:
        * http/tests/security/popup-allowed-by-sandbox-is-sandboxed.html:
            Updating effected tests with new console warnings.

2012-12-04  Emil A Eklund  <eae@chromium.org>

        Unreviewed chromium rebaseline for r136508.

        * platform/chromium-linux/compositing/masks/masked-ancestor-expected.png:
        * platform/chromium-mac-lion/compositing/masks/masked-ancestor-expected.png:
        * platform/chromium-mac-snowleopard/compositing/masks/masked-ancestor-expected.png:
        * platform/chromium-mac/compositing/masks/masked-ancestor-expected.png: